--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,5 @@
 cmake_minimum_required(VERSION 3.7)
+enable_testing()
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 set(CMAKE_CXX_STANDARD 14)
@@ -6,20 +7,12 @@ set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_FLAGS_DEBUG "-O1 -fno-omit-frame-pointer -g -fsanitize=address -Wall -Wextra -Werror")
 set(CMAKE_CXX_FLAGS_RELEASE "-O3 -Wall -Wextra -Werror -g")
 
-project(hz)
+project(dependent_lib)
 
 include(FindPkgConfig)
 pkg_search_module(gsl REQUIRED gsl)
 
 include_directories(./)
-include_directories(${gsl_INCLUDE_DIRS})
 
-set(HEADER_FILE
-    catch.h
-    dependent.h
-    dense_allocator.h)
-set(SOURCE_FILES
-    main_catch.cpp
-    dependent_unittests.cpp)
-
-add_executable(test ${SOURCE_FILES})
+add_subdirectory(dependent)
+add_subdirectory(catch)
