Issue #1: Hacking together a stub for span/string_vew.
Issue: https://github.com/ofats/dependent-lib/issues/1

--- a/dependent/ut/CMakeLists.txt
+++ b/dependent/ut/CMakeLists.txt
@@ -3,7 +3,8 @@ enable_testing()
 project(dependent_ut)
 
 set(SOURCE_FILES
-    dependent_ut.cpp)
+    dependent_ut.cpp
+    future_std_stubs_ut.cpp)
 
 add_executable(${PROJECT_NAME} ${SOURCE_FILES})
 
