Issue #7: Dependent-lib is now header only library.

--- a/dependent/ut/CMakeLists.txt
+++ b/dependent/ut/CMakeLists.txt
@@ -6,10 +6,10 @@ set(SOURCE_FILES
     dependent_ut.cpp
     future_std_stubs_ut.cpp
     stats_allocator_ut.cpp
-    )
+)
 
 add_executable(${PROJECT_NAME} ${SOURCE_FILES})
 
-target_link_libraries(${PROJECT_NAME} dependent catch)
+target_link_libraries(${PROJECT_NAME} catch)
 
 add_test(NAME ${PROJECT_NAME} COMMAND ${PROJECT_NAME})
