Issue #5: All keys from from Webster's dictionary

--- a/dependent/ut/CMakeLists.txt
+++ b/dependent/ut/CMakeLists.txt
@@ -5,8 +5,9 @@ project(dependent_ut)
 set(SOURCE_FILES
     dependent_ut.cpp
     future_std_stubs_ut.cpp
-    stats_allocator_ut.cpp
 )
+
+add_subdirectory(utils)
 
 add_executable(${PROJECT_NAME} ${SOURCE_FILES})
 
